src/main/java/org/example/Variables_types.java
package org.example;

public class Variables_types {
    // local var-> declared inside a method and accessible only within that
    // instance -> declare inside a class but outside method,
    // static -> delecred with static keyboard shared across everyhwhere
//    public class Employee{
//        String name; // instance var
//        static int count=0;
//        Employee(String name){
//            this.name=name;
//            count++;
//        }
//        void display(){
//            System.out.print("Employee"+name);
//        }
//        static void displayCount(){
//            System.out.print("Count"+count);
//        }
//        main(){
//            Employee e1=new Employee("a");
//            Employee e2=new Employee("b");
//            e1.display();e2.display();
//            Employee.displayCount(); // 2
//
//        }
//    }
//    public class Employee{
//        String name; // instance var
//         int count=0;
//        Employee(String name){
//            this.name=name;
//            count++;
//        }
//        void display(){
//            System.out.print("Employee"+name);
//        }
//        static void displayCount(){
//            System.out.print("Count"+count);
//        }
//        main(){
//            Employee e1=new Employee("a");
//            Employee e2=new Employee("b");
//            e1.display();e2.display();
//            Employee.displayCount(); // error
//
//        }
//    public class Employee{
//        String name; // instance var
//         int count=0;
//        Employee(String name){
//            this.name=name;
//            count++;
//        }
//        void display(){
//            System.out.print("Employee"+name);
//        }
//         void displayCount(){
//            System.out.print("Count"+count);
//        }
//        main(){
//            Employee e1=new Employee("a");
//            Employee e2=new Employee("b");
//            e1.display();e2.display();
//            e1.displayCount(); // 1
//         e2.displayCount(); // 1
//
//        }
}
